# dioxus_emoji_picker

./: Cargo.toml  Dioxus.toml  README.md
assets/: emoji_picker.css
demo/: Cargo.toml  Dioxus.toml  README.md
demo/assets/: emoji_picker.css  main.css
demo/src/: main.rs
src/: lib.rs
src/emoji_picker/: emoji_indexer.rs  mod.rs
src/emoji_picker/options/: mod.rs
