[package]
name = "dioxus_emoji_picker"
version = "0.2.1"
authors = ["Hugo <hugohp@proton.me>"]
edition = "2021"
description = "Dioxus Emoji Picker"
homepage="https://github.com/hugohp/dioxus_emoji_picker"
repository = "https://github.com/hugohp/dioxus_emoji_picker"
license = "GPL-3.0-or-later"
readme = "README.md"
exclude = [
	"images/emoji_picker.png"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.6.0", features = [] }
emojis = { version = "0.7.2", features = ["serde"] }
lazy_static = "1.5.0"
serde_json = "1.0.145"

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
